--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -75,8 +75,9 @@ body {
 }
 
 .primary-button {
-    width: 7.5rem;
-    height: 2.5rem;
+    width: 100%;
+    height: auto;
+    padding: 0.5rem 0 0.5rem;
     background-color: #1F4068;
     color: white;
     border-radius: 0.75rem;
@@ -85,9 +86,20 @@ body {
 }
 
 .secondary-button {
-    width: 7.5rem;
-    height: 2.5rem;
+    width:100%;
+    height: auto;
+    padding: 0.5rem 0 0.5rem;
     background-color: #991f1f;
+    color: white;
+    border-radius: 0.75rem;
+    border: none;
+    text-decoration: none;
+}
+
+.tertiary-button {
+    height: auto;
+    padding: 0.5rem 0 0.5rem;
+    background-color: #32502E;
     color: white;
     border-radius: 0.75rem;
     border: none;
@@ -100,13 +112,26 @@ body {
     width: 18rem;
 }
 
-// MEDIA QUERIES
-
-@media (max-width: 952px){
-    .prodigy-navbar{
-        
-    }
+//LOG IN
+.log-in-log{
+    box-shadow: 0 2px 10px #0000001a;
 }
+.log-in-form {
+    background-color: white;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 10px #0000001a;
+}
+
+.remember-me {
+    font-size: 12px;
+}
+
+.log-in-background{
+    background-image: url(../images/bg-green.jpg);
+}
+
+
+// MEDIA QUERIES
 
 @media (max-width: 952px){
     .prodigy-navbar{
