--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -233,12 +233,24 @@ input[type="search"]:focus {
     transform: scale(1.5);
 }
 
+.ellipsis-icon, .product-checkbox, .delete-button, .submit-button {
+    z-index: 1;
+}
+
 //EDIT PRODUCT
 .edit-photo {
     width: 15rem;
     height: 15rem;
     border-radius: 100%;
     object-fit: cover;
+}
+
+//SHOW PRODUCT
+.show-photo {
+    width: 15rem;
+    height: 15rem;
+    border-radius: 20%;
+    object-fit: cover; 
 }
 
 
@@ -258,7 +270,7 @@ input[type="search"]:focus {
             left: -100%;
             text-align: center;
             transition: all 0.5s;
-            z-index: 1;
+            z-index: 2;
             padding: 0;
         }
 
