--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,8 +77,6 @@ body {
 }
 
 .primary-button {
-  width: 100%;
-  height: auto;
   padding: 0.5rem 0 0.5rem;
   background-color: #1F4068;
   color: white;
@@ -88,7 +86,6 @@ body {
 }
 
 .secondary-button {
-  width: 100%;
   height: auto;
   padding: 0.5rem 0 0.5rem;
   background-color: #991f1f;
@@ -96,6 +93,10 @@ body {
   border-radius: 0.75rem;
   border: none;
   text-decoration: none;
+}
+
+.secondary-button span {
+  background-color: #e75454;
 }
 
 .tertiary-button {
@@ -106,6 +107,32 @@ body {
   border-radius: 0.75rem;
   border: none;
   text-decoration: none;
+}
+
+.search-bar {
+  border: none;
+  border-top-left-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+}
+
+input[type="search"]:focus {
+  border-width: 0px;
+  outline: 0;
+  /* I have also tried outline:none */
+  -webkit-appearance: none;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+.search-button {
+  background-color: #32502E;
+  color: white;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
+  border-top-right-radius: 0.75rem;
+  border-bottom-right-radius: 0.75rem;
 }
 
 .card-view {
@@ -132,6 +159,111 @@ body {
   background-image: url(../images/bg-green.jpg);
 }
 
+.product-row {
+  background-color: white;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0 2px 5px #0000001a;
+          box-shadow: 0 2px 5px #0000001a;
+}
+
+.product-row:hover {
+  background-color: #c8e7ba;
+  cursor: pointer;
+}
+
+.product-pic {
+  height: 4.5rem;
+  width: 4.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product-name {
+  width: 11rem;
+  font-size: 19px;
+  font-weight: bold;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  margin: 0;
+}
+
+.product-price {
+  font-size: 16px;
+  color: #0d8109;
+  margin: 0;
+}
+
+.product-quantity {
+  margin: 0;
+}
+
+.product-name-price {
+  width: 12rem;
+}
+
+.product-description {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ellipsis-icon {
+  height: 3rem;
+  width: 3rem;
+  -webkit-filter: invert(24%) sepia(10%) saturate(2249%) hue-rotate(66deg) brightness(95%) contrast(83%);
+          filter: invert(24%) sepia(10%) saturate(2249%) hue-rotate(66deg) brightness(95%) contrast(83%);
+}
+
+.ellipsis-icon:hover {
+  -webkit-filter: invert(24%) sepia(10%) saturate(2249%) hue-rotate(66deg) brightness(75%) contrast(100%);
+          filter: invert(24%) sepia(10%) saturate(2249%) hue-rotate(66deg) brightness(75%) contrast(100%);
+}
+
+.product-checkbox {
+  display: none;
+}
+
+.crud-div {
+  text-align: right;
+  display: none;
+}
+
+.select-multiple-blue {
+  background-color: #1F4068;
+  color: white;
+  height: auto;
+  border-radius: 0.75rem;
+}
+
+.select-multiple-check {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+.ellipsis-icon, .product-checkbox, .delete-button, .submit-button {
+  z-index: 1;
+}
+
+.edit-photo {
+  width: 15rem;
+  height: 15rem;
+  border-radius: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.show-photo {
+  width: 15rem;
+  height: 15rem;
+  border-radius: 20%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 @media (max-width: 952px) {
   .prodigy-navbar .checkbtn {
     display: block;
@@ -145,7 +277,7 @@ body {
     text-align: center;
     -webkit-transition: all 0.5s;
     transition: all 0.5s;
-    z-index: 1;
+    z-index: 2;
     padding: 0;
   }
   .prodigy-navbar li {
@@ -159,6 +291,15 @@ body {
   }
   .prodigy-navbar #check:checked ~ ul {
     left: 0;
+  }
+}
+
+@media (max-width: 450px) {
+  .product-description {
+    display: none;
+  }
+  .product-name {
+    width: 9rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
