--- a/public/css/pos.css
+++ b/public/css/pos.css
@@ -7,6 +7,7 @@
   border: none;
   text-decoration: none;
 }
+
 .primary-btn-100 {
   padding: 0.5rem 5rem 0.5rem 5rem;
   background-color: #1F4068;
@@ -70,7 +71,6 @@
   border: none;
   text-decoration: none;
 }
-
 
 .tbl-btn {
   /* padding: 0.5rem 1rem 0.5rem 1rem; */
@@ -139,9 +139,48 @@
   width: 100%;
 }
 
+.tab-link{
+  color: #3b3b3b;
+}
+
+.tab-link:hover{
+  background-color: #e9e9e9;
+  color: #3b3b3b;
+}
+
 @media screen and (max-width: 768px) {
   .cashier-opt-img{
     height: auto;
     width: 50%;
+  }
+}
+
+.list-height{
+  height: 550px;
+  width: auto;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scroll-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scroll-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+@media screen and (max-width: 576px) {
+  .list-height{
+    height: 300px;
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .list-height{
+    height: 300px;
+    width: auto;
   }
 }
