--- a/public/css/style.css
+++ b/public/css/style.css
@@ -262,6 +262,8 @@ input[type="search"]:focus {
   border-radius: 20%;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-box-shadow: 0 2px 5px #0000001a;
+          box-shadow: 0 2px 5px #0000001a;
 }
 
 @media (max-width: 952px) {
