--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -250,7 +250,8 @@ input[type="search"]:focus {
     width: 15rem;
     height: 15rem;
     border-radius: 20%;
-    object-fit: cover; 
+    object-fit: cover;
+    box-shadow: 0 2px 5px #0000001a;
 }
 
 
