Added filter sales in inventory

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -368,3 +368,11 @@ input[type="search"]:focus {
   }
 }
 /*# sourceMappingURL=style.css.map */
+
+.header-text{
+  color: #32502E;
+}
+
+.header-link{
+  text-decoration: none;
+}
